--- a/pom.xml
+++ b/pom.xml
@@ -107,7 +107,10 @@
             <artifactId>htmlunit-driver</artifactId>
             <version>4.11.0</version>
         </dependency>
-
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+        </dependency>
 
 
     </dependencies>
